# src/features/driver-order/driver-order.controller.ts
@@ -1,5 +1,5 @@
 import { DriverSession } from '@common/dto';
-import { ApiArrayResponse, CurrentUser } from '@decorators';
+import { ApiArrayResponse, ApiObjectResponse, CurrentUser } from '@decorators';
 import { DriverAuthGuard } from '@features/driver-auth/guards';
 import { OrderEntity } from '@features/order/entities/order.entity';
 import {
@@ -7,10 +7,13 @@ import {
   Get,
   HttpCode,
   HttpStatus,
+  Param,
+  Post,
   UseGuards,
 } from '@nestjs/common';
 import { ApiOperation, ApiTags } from '@nestjs/swagger';
 import { DriverOrderService } from './driver-order.service';
+import { DriverOrderGuard } from './guards';
 
 @ApiTags('Driver Order')
 @Controller('driver-order')
@@ -18,11 +21,31 @@ export class DriverOrderController {
   constructor(private readonly driverOrderService: DriverOrderService) {}
 
   @Get('pending')
-  @UseGuards(DriverAuthGuard)
+  @UseGuards(DriverAuthGuard, DriverOrderGuard)
   @ApiOperation({ summary: 'Get order pending for driver' })
   @ApiArrayResponse(OrderEntity)
   @HttpCode(HttpStatus.OK)
   async getOrderPending(@CurrentUser() driver: DriverSession) {
     return this.driverOrderService.getOrderPending(driver);
+  }
+
+  @Get('pending/:id')
+  @UseGuards(DriverAuthGuard, DriverOrderGuard)
+  @ApiOperation({ summary: 'Get order pending for driver' })
+  @ApiObjectResponse(OrderEntity)
+  @HttpCode(HttpStatus.OK)
+  async getOrderPendingDetail(@Param('id') orderId: number) {
+    return this.driverOrderService.getOrderPendingDetail(orderId);
+  }
+
+  @Post('pickup/:id')
+  @UseGuards(DriverAuthGuard, DriverOrderGuard)
+  @ApiOperation({ summary: 'Pick up order' })
+  @HttpCode(HttpStatus.OK)
+  async pickupOrder(
+    @CurrentUser() driver: DriverSession,
+    @Param('id') orderId: number,
+  ) {
+    return this.driverOrderService.pickupOrder(driver, orderId);
   }
 }
